--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -37,14 +37,14 @@
   cursor: pointer;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #8fa493;
+  background-color: #43a154;
   color: white;
   transition: background-color 0.3s;
   width:25%;
 }
 
 .inputButton:hover {
-  background-color: #59675b;
+  background-color: #2b6836;
 }
 
 .imageContainer {
@@ -72,7 +72,6 @@
   flex-direction: column;
   gap: 10px;
   width: 100%;
-  margin-top: 50px;
   margin-bottom: 50px;
 }
 
@@ -81,7 +80,7 @@ input{
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    width:100%px;
+    width:75%;
 }
 
 .linkButton{
