--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -1,3 +1,9 @@
+body{
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .mainContainer {
   display: flex;
   justify-content: center;
@@ -91,4 +97,10 @@ input{
 
 .linkButton:hover{
     color: #4b4b4b;
+}
+
+#chatPage{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
