--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -104,3 +104,14 @@ input{
     flex-direction: column;
     height: 100vh;
 }
+
+.defaultMessage{
+    display: flex;
+    margin-top: 50px;
+    font-weight: bold;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-size: 20px;
+    color: #9d9d9d;
+}
