--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -116,18 +116,35 @@ input{
     color: #9d9d9d;
 }
 
+.bookDisplay {
+  display: flex;
+  justify-content: center; 
+  flex-wrap: wrap;          
+  gap: 5px;               
+  margin: 50px;       
+}
+
 .book-card {
-  height: 500px;
-  width: 100%;
+  height: 100%;         
+  width: 100%;          
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: #fff;
+  border: 1px solid #ddd;  
+  border-radius: 10px;     
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .book-card img {
-  height: 300px;
-  width: 100%;
-  object-fit: cover;
+  height: 250px;   
+  margin-top: 20px;        
+  width: 100%;             
+  object-fit: contain;      
+}
+
+.book-card .card-body {
+  flex-grow: 1;             
 }
 .pageButton{
   background-color: #43a154;
